fix: profile text overflow

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,4 +6,5 @@
   row-gap: 5px;
   margin-top: 18px;
   margin-left: 30px;
+  margin-right: 30px;
 }
