--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,4 +4,7 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 1.33;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
